tests/analyzer/errors/missing_symbol_in_module.rv
use data.math

fn main() {
    var p = math.Rect {}
}
